<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".myJsonAPI.MyJsonAPIActivity">

        <!-- Advice of the day -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/advice_of_the_day"/>

        <Button
            android:id="@+id/btn_get_advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_get_advice" />

        <TextView
            android:id="@+id/tv_advice_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:minLines="2"
            android:hint="Random advice result..."
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <!-- Advice by id -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/get_advice_by_id"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_advice_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input any number here..."
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_advice_by_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_search_advice_id"/>

        <TextView
            android:id="@+id/tv_advice_by_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:minLines="2"
            android:hint="Advice by id result..."
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <!-- Advice by id -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/get_advice_by_search"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_advice_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input any word here"
            android:inputType="text"/>

        <Button
            android:id="@+id/btn_advice_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_search_advice_id"/>

        <TextView
            android:id="@+id/tv_advice_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:minLines="2"
            android:hint="Advice search result..."
            android:textColor="@color/black"
            android:textSize="14sp" />

</LinearLayout>